[gd_scene load_steps=66 format=4 uid="uid://bwi6sl1nbpsrw"]

[ext_resource type="Script" uid="uid://cmgvvoykg3gr7" path="res://scripts/dayTwo/dayTwoBedroom.gd" id="1_8u8ut"]
[ext_resource type="PackedScene" uid="uid://c8wffxipu48vg" path="res://scenes/player.tscn" id="2_bre7n"]
[ext_resource type="PackedScene" uid="uid://d24rahutnton5" path="res://scenes/DialogueArea.tscn" id="3_075vm"]
[ext_resource type="Script" uid="uid://divt8ny53jpna" path="res://scripts/DialogueExportResource.gd" id="4_juaa1"]
[ext_resource type="Script" uid="uid://c7hf8sppb4268" path="res://scripts/DialogueTextResource.gd" id="5_p8t3o"]
[ext_resource type="AudioStream" uid="uid://dy3b7ol61unl7" path="res://assets/sfx/ian_voice.wav" id="6_rt6dc"]
[ext_resource type="Script" uid="uid://bj218rqao0syu" path="res://scripts/DialogueFunctionResource.gd" id="7_5k4d8"]
[ext_resource type="TileSet" uid="uid://dyf0c38hkcw8q" path="res://apt_tiles.tres" id="8_p76m5"]
[ext_resource type="PackedScene" uid="uid://lyewe0q5cjnt" path="res://scenes/Objects/bed.tscn" id="9_l3gjy"]
[ext_resource type="PackedScene" uid="uid://c014t28xfb40m" path="res://scenes/Objects/radiator.tscn" id="10_g0rxc"]
[ext_resource type="PackedScene" uid="uid://i08cixlwo7qb" path="res://scenes/Objects/bedsideCabinet.tscn" id="11_d72xg"]
[ext_resource type="PackedScene" uid="uid://b0qm5wflcpv33" path="res://scenes/Objects/closet_d2.tscn" id="12_vbc1d"]
[ext_resource type="Texture2D" uid="uid://c2dwnfutixjke" path="res://assets/misc/black.png" id="13_dfhm6"]
[ext_resource type="PackedScene" uid="uid://dx8tl06100qlm" path="res://scenes/interact_indicator.tscn" id="14_uy1yx"]
[ext_resource type="Texture2D" uid="uid://bsnlq5gaas0au" path="res://assets/misc/interact_indicator_v2.png" id="15_tg8ti"]
[ext_resource type="PackedScene" uid="uid://cpuj6ktdfqhdu" path="res://scenes/change_room.tscn" id="17_d88li"]
[ext_resource type="Texture2D" uid="uid://qhcs6stv71ts" path="res://assets/objects/carpet.png" id="18_hbnwu"]
[ext_resource type="Texture2D" uid="uid://bm0b03u6il0ke" path="res://assets/misc/spotlight.png" id="19_67ua3"]
[ext_resource type="Texture2D" uid="uid://b82wipn7s8aq5" path="res://assets/objects/bedroom_table.png" id="20_yhrd0"]
[ext_resource type="Texture2D" uid="uid://jdo75bmqq2qp" path="res://assets/objects/bedroom_chair.png" id="21_q5ial"]
[ext_resource type="AudioStream" uid="uid://d2sgjcdb4dheu" path="res://assets/sfx/normal_typing.mp3" id="22_2yqx1"]
[ext_resource type="Texture2D" uid="uid://c00lpo5jtae1x" path="res://assets/Spritesheets/player_idle_up.png" id="22_vlh28"]
[ext_resource type="Texture2D" uid="uid://b5hki7kvg72vf" path="res://assets/misc/dust_particle.png" id="23_ev7bu"]
[ext_resource type="Texture2D" uid="uid://cmi7pf3kwmats" path="res://scenes/Days/DayTwo/d2.tres" id="24_tjd2g"]

[sub_resource type="Resource" id="Resource_y7lw4"]
script = ExtResource("5_p8t3o")
text = "*my laptop"
text_speed = 14.0
text_sound = ExtResource("6_rt6dc")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_561jh"]
script = ExtResource("5_p8t3o")
text = "*i do all my work on it"
text_speed = 14.0
text_sound = ExtResource("6_rt6dc")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_csr6t"]
size = Vector2(16, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_rnkns"]
polygon = PackedVector2Array(80, 16, 86, 16, 86, -21, -6, -21, -6, 54, 48, 54, 48, 48, 0, 48, 0, 0, 80, 0)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_rctb2"]
polygon = PackedVector2Array(64, 48, 80, 48, 80, 32, 86, 32, 86, 54, 64, 54)

[sub_resource type="Resource" id="Resource_6d6fp"]
script = ExtResource("5_p8t3o")
text = "*it's morning"
text_speed = 12.0
text_sound = ExtResource("6_rt6dc")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_2yqx1"]
script = ExtResource("7_5k4d8")
target_path = NodePath("..")
function_name = "startWakeUpTimer"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ffop"]

[sub_resource type="Resource" id="Resource_fkvcy"]
script = ExtResource("5_p8t3o")
text = "*A radiator. it keeps me warm"
text_speed = 14.0
text_sound = ExtResource("6_rt6dc")
text_volume_db = 1
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oarp8"]
size = Vector2(4, 17)

[sub_resource type="Resource" id="Resource_0dxpw"]
script = ExtResource("5_p8t3o")
text = "*It's my bedside table"
text_speed = 14.0
text_sound = ExtResource("6_rt6dc")
text_volume_db = 1
text_volume_pitch_min = 0.7
text_volume_pitch_max = 0.75
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q2hfq"]
size = Vector2(4, 7)

[sub_resource type="Resource" id="Resource_0snk2"]
script = ExtResource("5_p8t3o")
text = "*This is still my bed"
text_speed = 14.0
text_sound = ExtResource("6_rt6dc")
text_volume_db = 1
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dihqp"]
size = Vector2(10, 11)

[sub_resource type="Resource" id="Resource_ydxs3"]
script = ExtResource("5_p8t3o")
text = "*it's not my fault"
text_speed = 10.0
text_sound = ExtResource("6_rt6dc")
text_volume_pitch_min = 0.72
text_volume_pitch_max = 0.68
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_yh1vm"]
script = ExtResource("7_5k4d8")
target_path = NodePath("..")
function_name = "_fade_out_sequence"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_robq8"]
size = Vector2(24.069675, 254.16583)

[sub_resource type="Resource" id="Resource_bsotm"]
script = ExtResource("5_p8t3o")
text = "*right?"
text_speed = 10.0
text_sound = ExtResource("6_rt6dc")
text_volume_pitch_min = 0.72
text_volume_pitch_max = 0.68
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_0ei1j"]
script = ExtResource("7_5k4d8")
target_path = NodePath("..")
function_name = "dreamTimer"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d3b3h"]
size = Vector2(56, 62)

[sub_resource type="Resource" id="Resource_d3b3h"]
script = ExtResource("5_p8t3o")
text = "*it's my closet"
text_speed = 14.0
text_sound = ExtResource("6_rt6dc")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rctb2"]
size = Vector2(13, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fyqo4"]
size = Vector2(20, 7)

[sub_resource type="Gradient" id="Gradient_i04c0"]
offsets = PackedFloat32Array(0, 0.7310606)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rnkns"]
gradient = SubResource("Gradient_i04c0")
width = 244
height = 244
fill = 1
fill_from = Vector2(0.5, 0.4871795)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_620v4"]
size = Vector2(20, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hk2v5"]
size = Vector2(8, 10)

[sub_resource type="Resource" id="Resource_hk2v5"]
script = ExtResource("7_5k4d8")
target_path = NodePath("..")
function_name = "_work_timer"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6d6fp"]
size = Vector2(16, 8)

[sub_resource type="Resource" id="Resource_ofihm"]
script = ExtResource("7_5k4d8")
target_path = NodePath("..")
function_name = "_start_sleep_timer"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tjd2g"]
size = Vector2(10, 12)

[sub_resource type="Resource" id="Resource_tjd2g"]
script = ExtResource("5_p8t3o")
text = "*this used to be easier"
text_speed = 14.0
text_sound = ExtResource("6_rt6dc")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_robq8"]
script = ExtResource("7_5k4d8")
target_path = NodePath("..")
function_name = "_work_dialogue_2_timer"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2yqx1"]
size = Vector2(31, 31)

[sub_resource type="Resource" id="Resource_rnkns"]
script = ExtResource("5_p8t3o")
text = "*that's enough for today"
text_speed = 14.0
text_sound = ExtResource("6_rt6dc")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_ev7bu"]
script = ExtResource("5_p8t3o")
text = "*i could watch some TV now.."
text_speed = 14.0
text_sound = ExtResource("6_rt6dc")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Resource" id="Resource_2ffop"]
script = ExtResource("7_5k4d8")
target_path = NodePath("..")
function_name = "_stand_up_timer"
hide_dialogue_box = true
metadata/_custom_type_script = "uid://bj218rqao0syu"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ev7bu"]
size = Vector2(31, 31)

[sub_resource type="Curve" id="Curve_robq8"]
_data = [Vector2(0, 0.56320006), 0.0, 0.0, 0, 0, Vector2(0.27480915, 1), 0.0, 0.0, 0, 0, Vector2(0.71374047, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.56320006), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_dsoqk"]
width = 2048
curve = SubResource("Curve_robq8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_d3b3h"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(38, 30, 1)
direction = Vector3(-1, 0, 0)
spread = 180.0
initial_velocity_min = 0.099999994
initial_velocity_max = 0.5
gravity = Vector3(-1, 2, 0)
scale_curve = SubResource("CurveTexture_dsoqk")
alpha_curve = ExtResource("24_tjd2g")

[node name="Bedroom" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_8u8ut")

[node name="standUpTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="standUpDeskTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="WorkTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="WorkDialogueTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="WorkDialogueTimer2" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="SleepTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="SleepDialogueTimer" type="Timer" parent="."]
wait_time = 5.5
one_shot = true

[node name="DreamSq" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Player" parent="." instance=ExtResource("2_bre7n")]
position = Vector2(24, 10)
speed = 50.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(42, 19)

[node name="deskDialogue" parent="." instance=ExtResource("3_075vm")]
position = Vector2(45, 7)
dialogue = Array[ExtResource("4_juaa1")]([SubResource("Resource_y7lw4"), SubResource("Resource_561jh")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="deskDialogue"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_csr6t")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="."]
z_index = -1
occluder = SubResource("OccluderPolygon2D_rnkns")

[node name="LightOccluder2D3" type="LightOccluder2D" parent="."]
z_index = -1
occluder = SubResource("OccluderPolygon2D_rctb2")

[node name="Tiles" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAIAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAEAAAAAAAAAAAADAAEAAAAAAAAAAAACAAEAAAAAAAAAAAABAAEAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAAAP//AAADAAEAAAABAP//AAADAAEAAAACAP//AAADAAEAAAADAP//AAADAAEAAAAEAP//AAADAAEAAAD/////AAACAAEAAAAFAP//AAAEAAEAAAAFAP7/AAAEAAAAAAAEAP7/AAADAAAAAAADAP7/AAADAAAAAAACAP7/AAADAAAAAAABAP7/AAADAAAAAAAAAP7/AAADAAAAAAD///7/AAACAAAAAAD//wAAAAACAAIAAAAFAAAAAAAEAAMAAAAFAAIAAAABAAMAAAD//wIAAAACAAIAAAD//wEAAAACAAIAAAD//wMAAAACAAQAAAAAAAMAAAADAAQAAAABAAMAAAADAAQAAAACAAMAAAAAAAQAAAAEAAMAAAABAAQAAAAFAAMAAAAEAAQAAAADAAMAAAAFAAMAAAAFAAEAAAAFAAEAAAA=")
tile_set = ExtResource("8_p76m5")
metadata/_edit_lock_ = true

[node name="wakeUpDialogue" parent="." instance=ExtResource("3_075vm")]
position = Vector2(24, 10)
activate_instant = true
only_activate_once = true
dialogue = Array[ExtResource("4_juaa1")]([SubResource("Resource_6d6fp"), SubResource("Resource_2yqx1")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="wakeUpDialogue"]
shape = SubResource("RectangleShape2D_2ffop")
disabled = true

[node name="bed" parent="." instance=ExtResource("9_l3gjy")]
position = Vector2(8, -2)

[node name="Radiator" parent="." instance=ExtResource("10_g0rxc")]
position = Vector2(2, 27)

[node name="radiator_dialog" parent="." instance=ExtResource("3_075vm")]
position = Vector2(1, 33)
dialogue = Array[ExtResource("4_juaa1")]([SubResource("Resource_fkvcy")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="radiator_dialog"]
position = Vector2(1, 2.5)
shape = SubResource("RectangleShape2D_oarp8")

[node name="bedsideCabinet" parent="." instance=ExtResource("11_d72xg")]
position = Vector2(23, 1)

[node name="b_cabinet_dialog" parent="." instance=ExtResource("3_075vm")]
position = Vector2(23, 1)
dialogue = Array[ExtResource("4_juaa1")]([SubResource("Resource_0dxpw")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="b_cabinet_dialog"]
shape = SubResource("RectangleShape2D_q2hfq")

[node name="InteractIndicator" parent="." instance=ExtResource("14_uy1yx")]
modulate = Color(1, 1, 1, 0)
position = Vector2(8, -15)
texture = ExtResource("15_tg8ti")

[node name="bed_dialog" parent="." instance=ExtResource("3_075vm")]
position = Vector2(8, 7)
dialogue = Array[ExtResource("4_juaa1")]([SubResource("Resource_0snk2")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="bed_dialog"]
shape = SubResource("RectangleShape2D_dihqp")

[node name="sleep_dialogue" parent="." instance=ExtResource("3_075vm")]
position = Vector2(15, 7)
activate_instant = true
only_activate_once = true
dialogue = Array[ExtResource("4_juaa1")]([SubResource("Resource_ydxs3"), SubResource("Resource_yh1vm")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="sleep_dialogue"]
scale = Vector2(2.326579, -0.24393523)
shape = SubResource("RectangleShape2D_robq8")
disabled = true

[node name="sleep_dialogue2" parent="." instance=ExtResource("3_075vm")]
position = Vector2(15, 7)
activate_instant = true
only_activate_once = true
dialogue = Array[ExtResource("4_juaa1")]([SubResource("Resource_bsotm"), SubResource("Resource_0ei1j")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="sleep_dialogue2"]
shape = SubResource("RectangleShape2D_d3b3h")
disabled = true

[node name="closet2" parent="." instance=ExtResource("12_vbc1d")]
position = Vector2(71, -3)

[node name="closet_dialog" parent="." instance=ExtResource("3_075vm")]
position = Vector2(71, 1)
dialogue = Array[ExtResource("4_juaa1")]([SubResource("Resource_d3b3h")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="closet_dialog"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_rctb2")

[node name="toLivingroom" parent="." instance=ExtResource("17_d88li")]
position = Vector2(56, 55)
wanted_room_path = "res://scenes/Days/DayTwo/d2_livingroom.tscn"
wanted_player_pos = Vector2(24, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="toLivingroom"]
shape = SubResource("RectangleShape2D_fyqo4")

[node name="toBalcony" parent="." instance=ExtResource("17_d88li")]
position = Vector2(87, 24)
rotation = -1.5707964
wanted_room_path = "res://scenes/Days/DayTwo/d2_balcony.tscn"
wanted_player_pos = Vector2(14, 46)

[node name="CollisionShape2D" type="CollisionShape2D" parent="toBalcony"]
shape = SubResource("RectangleShape2D_fyqo4")

[node name="Carpet" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(41, 27)
texture = ExtResource("18_hbnwu")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(96, 24)
scale = Vector2(1, 1.0124278)
color = Color(1, 1, 0.8156863, 1)
energy = 0.74
shadow_enabled = true
texture = ExtResource("19_67ua3")

[node name="ambience" type="CanvasModulate" parent="."]
color = Color(0.7714783, 0.7921964, 0.8840396, 1)

[node name="ceilingLight" type="PointLight2D" parent="."]
position = Vector2(41, 19)
scale = Vector2(0.5204918, 0.5204918)
color = Color(0.9843529, 0.98745495, 0.9660104, 1)
energy = 0.4
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_rnkns")

[node name="BedroomTable" type="Sprite2D" parent="."]
position = Vector2(45, 1)
texture = ExtResource("20_yhrd0")

[node name="BedroomChair" type="Sprite2D" parent="."]
position = Vector2(45, 7)
texture = ExtResource("21_q5ial")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(45, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_620v4")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(45, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_hk2v5")

[node name="PlayerWorking" type="Sprite2D" parent="."]
visible = false
position = Vector2(45, 2)
texture = ExtResource("22_vlh28")
hframes = 2
frame = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="bScreen" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(42.499996, 16.000004)
scale = Vector2(20.8125, 12.375)
texture = ExtResource("13_dfhm6")

[node name="work_func" parent="." instance=ExtResource("3_075vm")]
position = Vector2(45, 7)
only_activate_once = true
dialogue = Array[ExtResource("4_juaa1")]([SubResource("Resource_hk2v5")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="work_func"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_6d6fp")
disabled = true

[node name="sleep_func" parent="." instance=ExtResource("3_075vm")]
position = Vector2(8, 7)
only_activate_once = true
dialogue = Array[ExtResource("4_juaa1")]([SubResource("Resource_ofihm")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="sleep_func"]
shape = SubResource("RectangleShape2D_tjd2g")
disabled = true

[node name="workDialog" parent="." instance=ExtResource("3_075vm")]
position = Vector2(45, 8)
activate_instant = true
only_activate_once = true
dialogue = Array[ExtResource("4_juaa1")]([SubResource("Resource_tjd2g"), SubResource("Resource_robq8")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="workDialog"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_2yqx1")
disabled = true

[node name="workDialog2" parent="." instance=ExtResource("3_075vm")]
position = Vector2(45, 8)
activate_instant = true
only_activate_once = true
dialogue = Array[ExtResource("4_juaa1")]([SubResource("Resource_rnkns"), SubResource("Resource_ev7bu"), SubResource("Resource_2ffop")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="workDialog2"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_ev7bu")
disabled = true

[node name="keyboard_sounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("22_2yqx1")
volume_db = -3.096
pitch_scale = 0.93

[node name="dust" type="GPUParticles2D" parent="."]
position = Vector2(40, 15)
amount = 20
texture = ExtResource("23_ev7bu")
speed_scale = 0.2
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_d3b3h")
metadata/_edit_lock_ = true

[connection signal="timeout" from="standUpTimer" to="." method="_on_stand_up_timer_timeout"]
[connection signal="timeout" from="standUpDeskTimer" to="." method="_on_stand_up_desk_timer_timeout"]
[connection signal="timeout" from="WorkTimer" to="." method="_on_work_timer_timeout"]
[connection signal="timeout" from="WorkDialogueTimer" to="." method="_on_work_dialogue_timer_timeout"]
[connection signal="timeout" from="WorkDialogueTimer2" to="." method="_on_work_dialogue_timer_2_timeout"]
[connection signal="timeout" from="SleepTimer" to="." method="_on_sleep_timer_timeout"]
[connection signal="timeout" from="SleepDialogueTimer" to="." method="_on_sleep_dialogue_timer_timeout"]
[connection signal="timeout" from="DreamSq" to="." method="_on_dream_sq_timeout"]
